# kalkulator-bmi

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
bmi_calculator/: __init__.py  core.py  gui.py
program/: __init__.py
