[tool.poetry]
name = "kalkulator_bmi"
version = "0.2.0"
description = "This package contains a BMI (Body Mass Index) calculator program with UI."
authors = ["Muhammad Iqbal <miqbal020@hotmail.com>"]
readme = "README.md"
packages = [{include = "bmi_calculator"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
bmi-calculator = "bmi_calculator.__init__:run_gui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
