[tool.poetry]
name = "kalkulator_bmi"
version = "1.0.0"
description = "This package contains a BMI (Body Mass Index) calculator program with UI."
authors = ["Muhammad Iqbal <miqbal20.work@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "bmi_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
bmi-calculator = "bmi_calculator.__init__:run_gui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"